# oaip

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  LICENSE  README.md  hardhat.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
bench/: run-bench-network.cjs  run-bench.cjs  summarize.cjs
bench/fixtures/: network-scenarios.json  scenarios.json
contracts/: MockTracerCaller.sol  OIAP_Tracer_Caller.sol  PvmVerifierMock.sol  VerificationRegistry.sol
contracts/pvm_verifier/: Cargo.toml
contracts/pvm_verifier/src/: lib.rs  test_imports.rs
contracts/pvm_zk_verifier/: Cargo.toml  IZKVerifier.sol  riscv64emac-unknown-none-polkavm.json
contracts/pvm_zk_verifier/src/: main.rs
docs/: index.html
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
prover-cli/: Cargo.toml
prover-cli/src/: main.rs
prover-cli/tests/: cli_tests.rs
scripts/: deploy-contracts.cjs  deploy-pvm-binary.cjs  deploy.sh  verify-live.cjs
test/: registry.cjs  verifier.cjs
