[package]
name = "prover-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
