[package]
name = "zk_verifier"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]


# ZK libraries — no_std compatible
# We enable `curve` so that BN254 exposes `Bn254`, `Fr`, and `Config` types.
ark-bn254       = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-groth16     = { version = "0.5.0", default-features = false }
ark-serialize   = { version = "0.5.0", default-features = false }
ark-ec          = { version = "0.5.0", default-features = false }
ark-ff          = { version = "0.4", default-features = false }

[features]
default = ["std"]
std = [
    "ark-bn254/std",
    "ark-groth16/std",
    "ark-serialize/std",
]
