cargo-features = ["panic-immediate-abort"]

[package]
name = "pvm_zk_verifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pvm_zk_verifier"
path = "src/main.rs"

[dependencies]
# pallet-revive host function bindings — real API surface from polkadot-sdk
pallet-revive-uapi = { version = "0.7", default-features = false }

# Heap allocator for no_std — required for Vec, alloc crate
picoalloc = { version = "5.2", default-features = false }

# ABI dispatch — keccak256 selectors matching Solidity expectations
alloy-sol-types = { version = "0.8", default-features = false }

# ZK cryptography — no_std compatible with arkworks 0.4.x
# We enable `curve` so BN254 exposes `Bn254`, `Fr`, and `Config` types.
ark-bn254     = { version = "0.4", default-features = false, features = ["curve"] }
ark-groth16   = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-ec        = { version = "0.4", default-features = false }
ark-ff        = { version = "0.4", default-features = false }

[profile.release]
opt-level = "z"    # Minimise binary size
lto       = true   # Link-time optimisation
# Required for `build-std-features=["panic_immediate_abort"]` compatibility.
panic     = "immediate-abort"
